<resources>
    <!-- <string name=""></string> -->

    <!-- Global -->
    <string name="go_back_label">Go Back</string>
    <string name="ungrouped_header" translatable="false">------</string>
    <string name="favorites_header">------ Favorites</string>
    <string name="new_group_header">------ New Group</string>
    <string name="new_group_header_count">------ New Group %d</string>
    <string name="no_clock_app_found_label">No clock app found</string>
    <string name="unable_open_settings_toast">Unable to open launcher settings</string>
    <string name="unable_open_wallpaper_app_toast">No wallpaper app available</string>
    <string name="unable_launch_app_toast">Unable to launch app</string>

    <!-- Main :: Temperature labels -->
    <string name="temp_warm">Warm</string>
    <string name="temp_hot">Hot</string>
    <string name="temp_critical">Critical</string>

    <!-- Main :: Battery status -->
    <string name="status_charging">Charging</string>
    <string name="status_discharging">Discharging</string>
    <string name="status_full">Full</string>
    <string name="status_not_charging">Not charging</string>
    <string name="status_unknown">Unknown</string>

    <!-- Main :: Charging types -->
    <string name="charge_usb">USB</string>
    <string name="charge_ac">AC</string>
    <string name="charge_wireless">Wireless</string>

    <!-- Main :: Formatting -->
    <string name="battery_status_power">%1$s %2$dx</string>
    <string name="battery_status_power_type">%1$s (%2$s) %3$dx</string>
    <string name="unit_celsius">C</string>
    <string name="unit_fahrenheit">F</string>
    <string name="battery_temp">%1$d°%2$s</string>
    <string name="battery_temp_labeled">%1$d°%2$s (%3$s)</string>

    <!-- APP / About -->
    <string name="app_name" translatable="false">Mako</string>
    <string name="app_description">A lightweight, distraction-free Android launcher that’s privacy-first and entirely on-device, designed for focus and simplicity.</string>
    <string name="icon_block_desc">No Background Tasks</string>
    <string name="icon_ads_desc">No Ads</string>
    <string name="icon_location_desc">No Trackers</string>
    <string name="icon_offline_desc">Works Offline</string>
    <string name="icon_license_desc">License GPLv3</string>
    <string name="mako_url" translatable="false">github.com/jmiguelrivas/mako</string>
    <string name="app_header">App</string>
    <string name="icons_header">Icons</string>
    <string name="fonts_header">Fonts</string>
    <string name="jersey_license_desc">SIL Open Font License (OFL) 1.1</string>
    <string name="jersey_url" translatable="false">github.com/scfried/soft-type-jersey</string>
    <string name="hackernoon_license_desc">License CC BY 4.0</string>
    <string name="hackernoon_url" translatable="false">github.com/hackernoon/pixel-icon-library</string>
    <string name="app_creator" translatable="false">Miguel Rivas</string>
    <string name="hackernoon_creator" translatable="false">HackerNoon</string>
    <string name="jersey_creator" translatable="false">Sarah Cadigan-Fried</string>
    <string name="hackernoon_product" translatable="false">Pixel Icon Library</string>
    <string name="jersey_product" translatable="false">Jersey 25 Regular</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="global_header">Global</string>
    <string name="clock_header">Clock</string>
    <string name="date_header">Date and Battery</string>
    <string name="styles_header">Styles</string>
    <string name="groups_header">Groups</string>
    <string name="set_default">Set Launcher as default</string>
    <string name="refresh_launcher">Refresh launcher</string>
    <string name="change_wallpaper">Change OS wallpaper</string>
    <string name="about_mako_label">About Mako</string>
    <string name="edit_apps">Edit apps</string>
    <string name="show_battery">Show battery</string>
    <string name="show_date">Show date</string>
    <string name="show_clock">Show clock</string>
    <string name="show_year_day">Show day of the year</string>
    <string name="add_group_label">+ Add New Group</string>
    <string name="pixel_font_label">Use Pixel Font (Jersey 25 Regular)</string>
    <string name="clock_none">Hide clock</string>
    <string name="clock_system">System default</string>
    <string name="clock_24">24-hour</string>
    <string name="clock_12">12-hour (AM/PM)</string>

    <!-- Popup :: Context Menu App -->
    <string name="rename_app">Rename app</string>
    <string name="add_to_favorites">Add to group...</string>
    <string name="open_settings">App settings...</string>

    <!-- Dialog -->
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog :: Rename App -->
    <string name="select_group">Select Group</string>

    <!-- Dialog :: Delete Group -->
    <string name="delete_group_title">Are you sure you want to delete this group?\nThis action cannot be undone.</string>
    <string name="delete_group">Delete group</string>

</resources>